# swarmlogix

./: CHANGELOG.md  README.md  api_server.py  dashboard.jsx  index.html  test_protocols.py
docs/: architecture.md
src/: swarmlogix_engine.py
vertex/: Cargo.toml  run_swarm.sh
vertex/examples/: handshake.rs  key_generate.rs  swarm_node.rs  vertex_bridge.rs  vertex_monitor.rs
vertex/src/: lib.rs  main.rs
