[package]
name = "swarmlogix-vertex"
version = "0.3.0"
edition = "2021"
description = "SwarmLogix P2P Delivery Coordination built on Tashi Vertex Consensus"

[dependencies]
tashi-vertex = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[[example]]
name = "key-generate"
path = "examples/key_generate.rs"

[[example]]
name = "swarm-node"
path = "examples/swarm_node.rs"

[[example]]
name = "vertex-monitor"
path = "examples/vertex_monitor.rs"
