[package]
name = "swarmlogix-vertex"
version = "0.3.0"
edition = "2021"
description = "SwarmLogix P2P Delivery Coordination built on Tashi Vertex Consensus"

[dependencies]
tashi-vertex = { git = "https://github.com/tashigit/tashi-vertex-rs.git" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[[example]]
name = "key-generate"
path = "examples/key_generate.rs"

[[example]]
name = "swarm-node"
path = "examples/swarm_node.rs"

[[example]]
name = "vertex-monitor"
path = "examples/vertex_monitor.rs"

[[example]]
name = "handshake"
path = "examples/handshake.rs"

[[example]]
name = "vertex-bridge"
path = "examples/vertex_bridge.rs"
